# dj-tables

./: .gitignore  Jenkinsfile  README.md  manage.py  mkdocs.yml  pod-template.yaml  pyproject.toml  setup.py  tox.ini
dj_tables/: __init__.py  mixins.py
dj_tables/templates/dj_tables/: bootstrap4.html  bootstrap4_sortlink.html
dj_tables/templatetags/: dj_tables.py
docs/: index.md  installation.md  template-tags.md
tests/: settings.py  test_templatetags.py  urls.py  views.py
