[build-system]
requires = ['flit_core >=2,<4']
build-backend = 'flit_core.buildapi'

[tool.flit.metadata]
module = 'dj_tables'
author = 'Zach Perkitny'
author-email = 'zperkitny@gmail.com'
home-page = 'https://github.com/ninjasforhealth/dj-tables'
requires = ['Django>=2.0.0']
description-file = 'README.md'
requires-python = '>=3.6'
dist-name = 'dj-tables'

[tool.flit.metadata.urls]
Documentation = 'https://dj-tables.readthedocs.io/en/latest/'
